# rustyflow-iot

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
api-server/: .env.example  Cargo.toml
api-server/migrations/: 20251025205807_media_init.sql
api-server/src/: config.rs  main.rs  state.rs
api-server/src/routes/: db.rs  health.rs  media.rs  mod.rs  sensors.rs  sys.rs
docker/mosquitto/: mosquitto.conf
docs/: learning-path.md  tutorial.sh
edge-agent/: Cargo.toml
edge-agent/src/: config.rs  main.rs  sensors.rs
mqtt-gateway/: Cargo.toml
mqtt-gateway/src/: config.rs  main.rs
shared-types/: Cargo.toml
shared-types/src/: error.rs  lib.rs  media.rs  messages.rs  sensor.rs
web-dashboard/: Cargo.toml  index.html  style.css
web-dashboard/src/: api.rs  main.rs
web-dashboard/src/components/: mod.rs  sensor_card.rs
