[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }