[package]
name = "edge-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT client
rumqttc = "0.24"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Shared types
shared-types = { path = "../shared-types" }

# Config
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Random number generation (for mock sensors)
rand = "0.8"

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
