[package]
name = "mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# MQTT client library
rumqttc = "0.24"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Shared types
shared-types = { path = "../shared-types" }

# Config and environment
dotenvy = "0.15"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# JSON serialization
serde_json = "1.0"
