[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["postgres", "uuid"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
